fix: superblock intro text sizing and spacing

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -1,3 +1,27 @@
+.super-block-intro-page p {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.17rem;
+}
+
+.super-block-intro-page > div {
+  padding: 0 30px;
+}
+
+.big-subheading {
+  font-size: 2rem;
+  overflow-wrap: break-word;
+}
+
+.big-block-title {
+  font-size: 1.5rem;
+  overflow-wrap: break-word;
+}
+
+.tutorial-title {
+  font-size: 1.17rem;
+  overflow-wrap: break-word;
+}
+
 .superBlock-image {
   max-width: 100%;
   height: auto !important;
@@ -68,6 +92,7 @@ button.map-title {
 }
 
 .map-cert-title > h3 {
+  font-size: 1.17rem;
   margin: 0 0 0 15px;
 }
 
@@ -116,6 +141,7 @@ button.map-title {
   display: flex;
   align-items: center;
   width: 100%;
+  font-size: 1.17rem;
 }
 
 .map-challenge-title a {
@@ -129,6 +155,26 @@ button.map-title {
 
 .block-description > p:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 500px) {
+  .super-block-intro-page p {
+    font-size: 1rem;
+  }
+
+  .big-subheading {
+    font-size: 1.35rem;
+  }
+
+  .big-block-title {
+    font-size: 1.17rem;
+  }
+
+  .tutorial-title,
+  .map-cert-title,
+  .map-challenge-title {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
